attempt 2 to fix navbar to fit mobile screens (flex-wrap)

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ img {
     align-items: center;
     background: transparent;
     padding: 24px 96px;
+    flex-wrap: wrap;
 }
 
 .navbar .container .logo {
